Marketing photo background, positioning, size and location fixed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>website</title>
 </head>
 
@@ -24,7 +24,10 @@
             </ul>
         </div>
     </div>
-    <div class="hero"></div>
+    <div class="hero">
+
+        <img id="background" src="assets/images/digital-marketing-meeting.jpg"/>
+    </div>
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
