--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -23,13 +23,14 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </header>
+    
     <div class="hero">
 
         <img id="background" src="assets/images/digital-marketing-meeting.jpg"/>
     </div>
     <div class="content">
-        <div class="search-engine-optimization">
+        <div id="search-engine-optimization" class="online-reputation-management">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
