changed div tag to header tag

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
-
-    <header class="header">
+    <!-- changed tag from "div" to "header" -->
+    <header class="mainMenu">
         <h1>Hori<span class="seo">seo</span>n</h1>
             <nav id="navigation-bar">
                 <ul>
                     <li>
-                        <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    <a href="#search-engine-optimization">Search Engine Optimization</a>
                     </li>
                     <li>
                         <a href="#online-reputation-management">Online Reputation Management</a>
@@ -24,12 +24,12 @@
                     </li>
                 </ul>
              </nav>
-    </header>
+            </header>
     
-    <div class="hero">
+    <figure class="hero">
 
         <img id="background" src="assets/images/digital-marketing-meeting.jpg"/>
-    </div>
+    </figure>
     <div class="content">
         <div id="search-engine-optimization" class="online-reputation-management">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
