--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-    <!-- changed tag from "div" to "header" -->
+    <!-- changed from "div" to "header" -->
     <header class="mainMenu">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-            <nav id="navigation-bar">
+         <h1>Hori<span class="seo">seo</span>n</h1>
+             <nav id="navigationVar">
                 <ul>
                     <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,20 +24,20 @@
                     </li>
                 </ul>
              </nav>
-            </header>
-    
+    </header>
+    <!-- Change div tag to figure tag -->
     <figure class="hero">
-
         <img id="background" src="assets/images/digital-marketing-meeting.jpg"/>
     </figure>
-    <div class="content">
-        <div id="search-engine-optimization" class="online-reputation-management">
+<!-- Changed div tag to section tag -->
+    <section class="content">
+        <article id="search-engine-optimization" class="online-reputation-management">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
+        </article>
         <div id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -52,7 +52,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </section>
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
