--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </figure>
 <!-- Changed div tag to section tag -->
     <section class="content">
-        
+        <!--Changed div tags to article tags  -->
         <article id="search-engine-optimization" class="online-reputation-management">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -62,30 +62,35 @@
         </article>
 
     </section>
-
+<!-- Changed div tag to aside tag -->
     <aside class="benefits">
+        <!-- Changed div tag to article tag -->
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
+            <img src="./assets/images/lead-generation.png" alt="Lead Generation" />
+                <p>
+                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+                </p>
         </article>
+
         <article class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
+            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness"/>
+                <p>
+                    Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+                </p>
         </article>
+
         <article class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
+            <img src="./assets/images/cost-management.png" alt="Cost Management">
+                <p>
+                    As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                </p>
         </article>
+
     </aside>
+    
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
