--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 <!-- Changed div tag to aside tag -->
     <aside class="benefits">
         <!-- Changed div tag to article tag -->
+        <!-- Added alt attributes to images -->
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Lead Generation" />
@@ -90,13 +91,16 @@
         </article>
 
     </aside>
-    
-    <div class="footer">
+
+    <footer class="footer">
+
         <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
-    </div>
+            <p>
+                &copy; 2019 Horiseon Social Solution Services, Inc.
+            </p>
+
+    </footer>
+
 </body>
 
 </html>
