--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <!-- changed from "div" to "header" -->
+    <!-- Updated from "div" to "header" -->
     <header class="mainMenu">
 
          <h1>Hori<span class="seo">seo</span>n</h1>    
@@ -27,15 +27,15 @@
         </nav>
 
     </header>
-    <!-- Change div tag to figure tag -->
+    <!-- Updated div tag to figure tag -->
     <figure class="hero">
 
        <img id="background" alt="Digital Marketing Meeting" src="assets/images/digital-marketing-meeting.jpg"/>
 
     </figure>
-<!-- Changed div tag to section tag -->
+<!-- Updated div tag to section tag -->
     <section class="content">
-        <!--Changed div tags to article tags  -->
+        <!--Updated div tags to article tags  -->
         <article id="search-engine-optimization" class="online-reputation-management">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -61,9 +61,9 @@
         </article>
 
     </section>
-<!-- Changed div tag to aside tag -->
+<!-- Updated div tag to aside tag -->
     <aside class="benefits">
-        <!-- Changed div tag to article tag -->
+        <!-- Updated div tag to article tag -->
         <!-- Added alt attributes to images -->
         <article class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -90,7 +90,7 @@
         </article>
 
     </aside>
-<!-- Changed div tag to footer tag -->
+<!-- Updated div tag to footer tag -->
     <footer class="footer">
 
         <h2>Made with ❤️️ by Horiseon</h2>
